syntax = "proto3";

package dCachePB;

option go_package = "./dCachePB";

message dCacheRequest {
    string group = 1;
    string key = 2;
}

message dCacheResponse {
    string value = 1;
}

service GroupCache {
  rpc Get(dCacheRequest) returns (dCacheResponse);
}